@@ -17,6 +17,8 @@ Release 2.0 - ???
 
 Release 1.14 - ???
 
+  * Maintain passed-in mime in TXTParser (TIKA-2047).
+
   * Upgrade to POI 3.15-final (TIKA-2013).
 
   * Upgrade to PDFBox 2.0.3 (TIKA-2051).
